plugins {
    alias(libs.plugins.android.application)
//    alias(libs.plugins.roomCompiler)
}

android {
    namespace 'com.prenticeweb.weightlossbuddy'
    compileSdk 35

    defaultConfig {
        applicationId "com.prenticeweb.weightlossbuddy"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {

    implementation libs.appCompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintLayout
    implementation libs.commonsLang3
    implementation 'com.google.guava:guava:33.4.8-android'
    implementation "androidx.room:room-runtime:2.7.1"
    implementation("androidx.room:room-guava:2.7.1")
    implementation libs.gridlayout
    implementation 'com.github.PhilJay:MPAndroidChart:3.1.0'

    annotationProcessor "androidx.room:room-compiler:2.7.1"
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    compileOnly 'org.projectlombok:lombok:1.18.38'

    testImplementation libs.junitJupiter
    testImplementation libs.assertJ

    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

}



tasks.withType(Test) {
    useJUnitPlatform()
//    jvmArgs '--enable-preview' -- with or without makes no much difference
}
